alterando de plural de singular!

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="img">
                 <img src="/images/img.jpg" alt="img">
                 <h1>🐱Rebecca Aviz🐱</h1>
-                <h2>Designer de Modas | Blogueira</h2>
+                <h2>Designer de Moda | Blogueira</h2>
              
             </div>
             <p class="description">
-                Graduada em Designer de Modas. 
+                Graduada em Designer de Moda. 
                 Atualmente estudo Marketing digital e Designer web 
                  Sou apaixonada por Moda e tenho um Canal no Youtube.
             </p>
